fix wrapper padding on mobile

--- a/site/src/app/roadmap/RoadmapPage.scss
+++ b/site/src/app/roadmap/RoadmapPage.scss
@@ -11,9 +11,4 @@
     overflow-y: auto;
     padding: 0;
   }
-
-  .main-wrapper.mobile {
-    width: 100%;
-    padding: 16px;
-  }
 }
